--- a/flask_nuxt/static/index.html
+++ b/flask_nuxt/static/index.html
@@ -8,6 +8,8 @@
         Documentation
       </a> <a href="https://github.com/nuxt/nuxt.js" target="_blank" rel="noopener noreferrer" class="button--grey">
         GitHub
-      </a> <a href="/" aria-current="page" class="nuxt-link-exact-active nuxt-link-active">Home page</a> <a href="/about">about</a> <a href="/users">users</a></div></div></div></div></div></div><script>window.__NUXT__=function(e){return{layout:"default",data:[{}],fetch:{},error:e,serverRendered:!0,routePath:"/",config:{_app:{basePath:"/",assetsPath:"/_nuxt/",cdnURL:e}}}}(null)</script><script src="/_nuxt/1b22b63.js" defer></script><script src="/_nuxt/f6c7401.js" defer></script><script src="/_nuxt/e25414d.js" defer></script><script src="/_nuxt/1f5ffe0.js" defer></script>
+      </a> <a href="/" aria-current="page" class="button--grey nuxt-link-exact-active nuxt-link-active">Home page</a>
+        <a href="/about" rel="noopener noreferrer" class="button--grey">about</a>
+        <a href="/users" rel="noopener noreferrer" class="button--grey">users</a></div></div></div></div></div></div><script>window.__NUXT__=function(e){return{layout:"default",data:[{}],fetch:{},error:e,serverRendered:!0,routePath:"/",config:{_app:{basePath:"/",assetsPath:"/_nuxt/",cdnURL:e}}}}(null)</script><script src="/_nuxt/1b22b63.js" defer></script><script src="/_nuxt/f6c7401.js" defer></script><script src="/_nuxt/e25414d.js" defer></script><script src="/_nuxt/1f5ffe0.js" defer></script>
   </body>
 </html>
